# smart-switch

./: CMakeLists.txt  README.md  sdkconfig
include/: IOC.h  cryptography.h  tcpIp.h  tcpRequest.h  utils.h  wifi.h
main/: CMakeLists.txt  IOC.c  cryptography.c  main.c  tcpIp.c  tcpRequest.c  utils.c  wifi.c
proto-c/: TCPRequest.proto  message.pb-c.c  message.pb-c.h  message.proto
